...
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ingredient_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
...
                android:layout_marginTop="24dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ing_content_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ing_content_date_input"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
...
                android:inputType="date"
                android:maxLength="10"
                android:minHeight="48dp"
                android:paddingStart="8sp" />

            <Button
                android:id="@+id/ingredient_date_button"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="DATE"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

            <TextView
                android:id="@+id/ing_content_quantity_title"
                android:layout_width="wrap_content"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ing_content_quantity_input"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"
                    android:ems="10"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:paddingStart="8sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <Spinner
                    android:id="@+id/ing_content_unit_input"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
...
                android:layout_marginTop="24dp"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ing_content_category_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/btn_dropdown"
...

                <Button
                    android:id="@+id/ing_view_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ing_view_save_button"
                    app:layout_constraintEnd_toStartOf="@+id/ing_view_save_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/ing_view_save_button"
...
