...
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="ingredient_information">Ingredient Information</string>
    <string name="best_before_date">Best Before Date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="select_one">Select One</string>

    <!-- LoginScreen -->

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgot_password_prompt"><u>Forgot your password?</u></string>
    <string name="ingredient_storage">Ingredient Storage</string>
...
